# clima-manejo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  vercel_entry.py
backend/app/: cache.py  logger.py  main.py  schemas.py  variable_map.py
backend/app/routes/: cities.py  health.py  weather.py
backend/app/services/: geocoding.py  open_meteo.py
backend/tests/: test_cache.py  test_derived.py  test_geocoding_integration.py  test_mapping.py  test_weather_integration.py
frontend/: Dockerfile  jest.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/.husky/: commit-msg  pre-commit
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/cities/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/weather/: route.ts
frontend/src/components/: AdvancedMetrics.tsx  CitySearchBox.test.tsx  CitySearchBox.tsx  ErrorBoundary.tsx  WeatherCards.tsx  WeatherDashboard.test.tsx  WeatherDashboard.tsx  WeatherDetails24h.tsx
frontend/src/components/ui/: Button.test.tsx  Button.tsx  ThemeToggle.tsx
frontend/src/lib/: format.ts  types.ts
