[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canac-clima-backend"
version = "0.1.0"
description = "Backend para Canac Clima - Manejo de Cana"
authors = [{name = "Canac Team"}]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
]
requires-python = ">=3.11"