[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clima-manejo-backend"
version = "0.1.0"
description = "Backend para Clima para Manejo - Manejo de Cana"
authors = [{name = "samdevtx"}]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]